More flexible local FS
The name of the local storage filesystem used to be hard-coded as
/local_storage, and the feature used to be always on unless you
altered plasmacore.cpp.  Now, you define the path using the
Makefile with -D LOCAL_FS="/path_name", which is done by default
to match the old behavior.  If it's not specified, local storage
isn't configured automatically.

--- a/Platforms/Web/Makefile
+++ b/Platforms/Web/Makefile
@@ -50,6 +50,7 @@ $(BUILD_FOLDER)/$(OUTPUT_NAME).html: $(BUILD_FOLDER)/Source/RogueProgram.cpp $(S
 	       -s USE_SDL=2 \
 	       -s USE_LIBPNG=1 \
 	       -s EXPORTED_FUNCTIONS="['_main', '_malloc', '_start_main_loop']" \
+	       -D LOCAL_FS='"/local_storage"' \
 	       -std=c++11 \
 	       --preload-file $(BUILD_FOLDER)/Assets@/Assets \
 	       -Wall \
