Finished web local storage - 'make web' to see the example currently in the starter project.

--- a/Platforms/Web/Makefile
+++ b/Platforms/Web/Makefile
@@ -49,7 +49,7 @@ $(BUILD_FOLDER)/$(OUTPUT_NAME).html: $(BUILD_FOLDER)/Source/RogueProgram.cpp $(S
 	$(CXX) -I$(BUILD_FOLDER)/Source \
 	       -s USE_SDL=2 \
 	       -s USE_LIBPNG=1 \
-	       -s EXPORTED_FUNCTIONS="['_main', '_malloc', '_start_main_loop']" \
+	       -s EXPORTED_FUNCTIONS="['_main', '_malloc', '_launch_plasmacore']" \
 	       -D LOCAL_FS='"/IDBFS"' \
 	       -std=c++11 \
 	       --preload-file $(BUILD_FOLDER)/Assets@/Assets \
