Removing STL from SDL.

--- a/Platforms/Web/Makefile
+++ b/Platforms/Web/Makefile
@@ -1,4 +1,4 @@
-OPT_CFLAGS += -O3
+#OPT_CFLAGS += -O3
 OPT_CFLAGS += -s ASSERTIONS=0 -s PRECISE_I64_MATH=0 --closure 1
 
 # 150 MB by default
@@ -22,6 +22,8 @@ SDLCORE_FILES := \
   $(SDLCORE_FOLDER)/PlasmacoreMessage.cpp \
   $(SDLCORE_FOLDER)/PlasmacoreView.cpp \
   $(SDLCORE_FOLDER)/PlasmacoreSoundSDLMixer.cpp \
+  $(SDLCORE_FOLDER)/PlasmacoreCString.cpp \
+  $(SDLCORE_FOLDER)/PlasmacoreCStringBuilder.cpp \
   $(SDLCORE_FOLDER)/RogueInterface.cpp
 
 -include Settings.mk
