--- a/Platforms/Web/Makefile
+++ b/Platforms/Web/Makefile
@@ -22,8 +22,7 @@ SDLCORE_FILES := \
   $(SDLCORE_FOLDER)/PlasmacoreMessage.cpp \
   $(SDLCORE_FOLDER)/PlasmacoreView.cpp \
   $(SDLCORE_FOLDER)/PlasmacoreSoundSDLMixer.cpp \
-  $(SDLCORE_FOLDER)/PlasmacoreCString.cpp \
-  $(SDLCORE_FOLDER)/PlasmacoreCStringBuilder.cpp \
+  $(SDLCORE_FOLDER)/PlasmacoreUtility.cpp \
   $(SDLCORE_FOLDER)/RogueInterface.cpp
 
 -include Settings.mk
