--- a/Platforms/Android/app/build.gradle
+++ b/Platforms/Android/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "plasmacore.org.project"
+        applicationId "org.plasmacore.project"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
