--- a/Platforms/Android/app/src/main/AndroidManifest.xml
+++ b/Platforms/Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="plasmacore.org.project">
+          package="org.plasmacore.project">
 
     <application
         android:allowBackup="true"
