[Rogo Build] Removing RogueC+libs from repo; end dev can embed copy.
- Rogue must now be installed to build a new Plasmacore project.
- After which:
- "rogo install rogue" will install an embedded copy of Rogue in the current project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+BuildLocal.rogue
+
 # Vim
 *.swp
 *.local
@@ -8,7 +10,6 @@ Publish.mk
 **/Local.mk
 **/Build/
 .rogo
-Programs/Linux
 
 # Merge/Patch/etc.
 *.orig
