--- a/Platforms/Android/framework/CMakeLists.txt
+++ b/Platforms/Android/framework/CMakeLists.txt
@@ -11,13 +11,16 @@ cmake_minimum_required(VERSION 3.4.1)
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             native-plasmacore
+             plasmacore
 
              # Sets the library as a shared library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/AndroidPlasmacore.cpp )
+             src/main/cpp/AndroidPlasmacore.cpp
+             ../../../Build/Android/Source/RogueProgram.cpp )
+
+target_include_directories( plasmacore PRIVATE ../../../Build/Android/Source )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -37,7 +40,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-plasmacore
+                       plasmacore
 
                        # Links the target library to the log library
                        # included in the NDK.
