--- a/Platforms/Android/plasmacore/build.gradle
+++ b/Platforms/Android/plasmacore/build.gradle
@@ -24,6 +24,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            ndk {
+                abiFilters "armeabi-v7a"
+            }
+        }
     }
 
     externalNativeBuild {
