--- a/Platforms/macOS/Project-macOS/Info.plist
+++ b/Platforms/macOS/Project-macOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2016 Plasmaworks. All rights reserved.</string>
+	<string>Copyright © 2019 AuthorName. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
