--- a/Platforms/Web/Makefile
+++ b/Platforms/Web/Makefile
@@ -1,5 +1,5 @@
 OPT_CFLAGS += -O3
-OPT_CFLAGS += -s ASSERTIONS=0 -s PRECISE_I64_MATH=0 --closure 0
+OPT_CFLAGS += -s ASSERTIONS=0 --closure 0
 
 # asm.js wants a multiple of 16 MB
 RUNTIME_MEMORY = 16MB
