--- a/Platforms/Android/.gitignore
+++ b/Platforms/Android/.gitignore
@@ -1,11 +1,25 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-.DS_Store
 /build
+.gradle
+.idea/assetWizardSettings.xml
+.idea/caches
+.idea/dataSources.ids
+.idea/dataSources.local.xml
+.idea/dataSources.xml
+.idea/dynamic.xml
+.idea/gradle.xml
+.idea/libraries
+.idea/misc.xml
+.idea/modules.xml
+.idea/mongoSettings.xml
+.idea/sqlDataSources.xml
+.idea/tasks.xml
+.idea/uiDesigner.xml
+.idea/workspace.xml
+.idea_modules/
+.idea_vcs.xml
+*.iml
+local.properties
+src/main/assets
 /captures
 .externalNativeBuild
+
