[Build] Revamped repo install/sync/update mechanism
- Moved off of depz.
- Rogo now invokes Git directly to clone or pull changes to the Plasmacore repo.
- Removed 'Bootstrap.rogue' and merged its functionality into 'BuildCore.rogue'.
- Plasmacore fixed location moved from Plasmacore/ -> Libraries/Plasmacore/
- Libraries/Plasmacore/ renamed Libraries/Framework/ to reduce confusion.
  - Otherwise a project would access Libraries/Plasmacore/Libraries/Plasmacore/...
  - Now it is Libraries/Plasmacore/Libraries/Framework/...

--- a/Platforms/Android/plasmacore/CMakeLists.txt
+++ b/Platforms/Android/plasmacore/CMakeLists.txt
@@ -18,7 +18,7 @@ add_custom_command(
       ${CMAKE_SOURCE_DIR}/../../../Build/Android/Source/RogueProgram.h
       ${CMAKE_SOURCE_DIR}/../../../Build/Android/Source/RogueProgram.cpp
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../../..
-    COMMAND rogo android
+    COMMAND rogo android build
 )
 
 # Creates and names a library, sets it as either STATIC
