--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,20 @@
+# Rogo Build
+/Build
 BuildLocal.rogue
-/Plasmacore
+.rogo
+Local.settings
 
 # Vim
 *.swp
-*.local
+*.swo
 
 # Android
 **/src/main/assets
-
-Test
-**/Local.settings
-**/Build/
-.rogo
-
-# Merge/Patch/etc.
-*.orig
-*.rej
-*.diff
-*.patch
 
 # Mac
 .DS_Store
 
 # Xcode
-#
 build/
 *.pbxuser
 !default.pbxuser
@@ -40,3 +31,4 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+
