[Android] Recreated Android project

--- a/Platforms/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Platforms/Android/app/src/main/cpp/CMakeLists.txt
@@ -5,38 +5,19 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -fno-strict-aliasing -Wno-invalid-offsetof")
-
-add_custom_target(
-    run_rogo ALL
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/__always_run.h
-    )
-
-add_custom_command(
-    OUTPUT
-      ${CMAKE_CURRENT_BINARY_DIR}/__always_run.h  # Non-existent; ensures we run each time
-      ${CMAKE_SOURCE_DIR}/../../../Build/Android/Source/RogueProgram.h
-      ${CMAKE_SOURCE_DIR}/../../../Build/Android/Source/RogueProgram.cpp
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../../..
-    COMMAND rogo android build
-)
-
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             plasmacore
+             native-lib
 
              # Sets the library as a shared library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             src/main/cpp/AndroidPlasmacore.cpp
-             ../../../Build/Android/Source/RogueProgram.cpp )
-
-target_include_directories( plasmacore PRIVATE ../../../Build/Android/Source )
+             native-lib.cpp )
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -56,8 +37,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       plasmacore
-                       GLESv2
+                       native-lib
 
                        # Links the target library to the log library
                        # included in the NDK.
