--- a/Platforms/Android/settings.gradle
+++ b/Platforms/Android/settings.gradle
@@ -1,3 +1,11 @@
-include ':plasmacore'
-include ':app'
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        //maven { url 'https://jitpack.io' }
+    }
+}
 rootProject.name = "Plasmacore"
+include ':app', ':plasmacore'
